test/pass/optargs/optarg_class_method.lly
class abc {
    define ghi(a: *Integer=10) {
    }
}

abc::new().ghi()
